<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.WeatherFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/rain"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_title"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hintForSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/description"
            android:textSize="13sp"
            android:textAlignment="center"
            android:lineSpacingExtra="15sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toStartOf="@id/getWeatherBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hintForSearch"
            app:layout_constraintBottom_toTopOf="@id/getCurrentWeatherBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_for_input"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getWeatherBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_for_input_city"
            android:background="@drawable/button_background"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/hintForSearch"
            app:layout_constraintBottom_toTopOf="@id/getCurrentWeatherBtn"
            app:layout_constraintStart_toEndOf="@id/cityInputLayout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getCurrentWeatherBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/btn_for_current_city"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/cityInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/getCurrentWeatherBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/feelsLikeTemperatureTextView"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feelsLikeTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/getCurrentWeatherBtn"
            app:layout_constraintStart_toEndOf="@id/temperatureTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="30dp"
            android:padding="16dp"
            android:background="@drawable/rv_background"
            app:layout_constraintTop_toBottomOf="@id/temperatureTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>